--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<head>
-    <title>ABC</title>
-</head>
-<body>
-    <h1>
-        Title
-    </h1>
-</body>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <header>
+
+    </header>
+    <body>
+        <h1>
+            Asdasd
+        </h1>
+        <script src="script.js"></script>
+    </body>
+</html>
