--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <h1>
             Asdasd
         </h1>
+        <p>
+            First paragraph
+        </p>
         <script src="script.js"></script>
     </body>
 </html>
