--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <header></header>
-  <body>
-    <section>
-      <h1>Asdasd</h1>
-      <p>First paragraph</p>
-      <script src="script.js"></script>
-    </section>
-  </body>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <header>
+
+    </header>
+    <body>
+        <h1>
+            Asdasd
+        </h1>
+        <p>
+            First paragraph
+        </p>
+        <script src="script.js"></script>
+    </body>
 </html>
